@@ -3,16 +3,19 @@ package ru.vtosters.lite.net;
 import android.util.Base64;
 import android.util.Log;
 
-import java.io.ByteArrayOutputStream;
-import java.io.IOException;
-import java.io.InputStream;
-import java.io.UnsupportedEncodingException;
+import java.io.*;
 import java.net.*;
 import java.nio.charset.StandardCharsets;
 import java.util.Map;
 import java.util.TreeMap;
 
 public final class NetCall {
+    // Constants for the request methods, content types, and encoding
+    private static final String GET = "GET";
+    private static final String POST = "POST";
+    private static final String FORM = "application/x-www-form-urlencoded";
+    private static final String UTF_8 = "UTF-8";
+
     private final NetRequest req;
     private final NetClient cl;
 
@@ -22,13 +25,17 @@ public final class NetCall {
     }
 
     private static String constructArgs(Map<String, String> args) throws UnsupportedEncodingException {
+        // Use a TreeMap to sort the arguments by key
         args = new TreeMap<>(args);
-        String str = "";
-        for (Map.Entry<String, String> en : args.entrySet()) {
-            if (!str.isEmpty()) str += "&";
-            str += URLEncoder.encode(en.getKey(), "UTF-8") + "=" + URLEncoder.encode(en.getValue(), "UTF-8");
+        // Use a StringBuilder to append the arguments
+        StringBuilder sb = new StringBuilder();
+        for (Map.Entry<String, String> entry : args.entrySet()) {
+            if (sb.length() > 0) sb.append("&");
+            sb.append(URLEncoder.encode(entry.getKey(), UTF_8))
+                    .append("=")
+                    .append(URLEncoder.encode(entry.getValue(), UTF_8));
         }
-        return str;
+        return sb.toString();
     }
 
     public NetRequest request() {
@@ -38,38 +45,52 @@ public final class NetCall {
     public NetResponse execute() throws IOException {
         Proxy proxy = cl.getProxy();
         PasswordAuthentication auth = cl.getAuthenticator();
-        HttpURLConnection con = (HttpURLConnection) new URL(req.url()).openConnection(proxy != null ? proxy : Proxy.NO_PROXY);
+        HttpURLConnection connection = (HttpURLConnection) new URL(req.url()).openConnection(proxy != null ? proxy : Proxy.NO_PROXY);
         if (proxy != null && auth != null) {
+            // Set the proxy authentication header
             String authStr = "Basic " + Base64.encodeToString((auth.getUserName() + new String(auth.getPassword())).getBytes(), Base64.NO_WRAP);
-            con.setRequestProperty("Proxy-Connection", "Keep-Alive");
-            con.setRequestProperty("Proxy-Authorization", authStr);
+            connection.setRequestProperty("Proxy-Connection", "Keep-Alive");
+            connection.setRequestProperty("Proxy-Authorization", authStr);
         }
-        con.setConnectTimeout((int) cl.getTimeout());
-        con.setRequestMethod(req.getRequestMethod());
-        if (req.getRequestMethod().equals("POST")) {
-            con.setRequestProperty("Content-Type", "application/x-www-form-urlencoded");
+        connection.setConnectTimeout((int) cl.getTimeout());
+        connection.setRequestMethod(req.getRequestMethod());
+        if (req.getRequestMethod().equals(POST)) {
+            // Set the content type for POST requests
+            connection.setRequestProperty("Content-Type", FORM);
         }
         Map<String, String> params = req.getRequestParams();
         if (params != null) {
-            String strArgs = constructArgs(params);
-            con.setRequestProperty("Content-Length", String.valueOf(strArgs.getBytes(StandardCharsets.UTF_8).length));
-            con.setDoOutput(true);
-            con.getOutputStream().write(strArgs.getBytes(StandardCharsets.UTF_8));
-            con.getOutputStream().close();
+            // Write the request parameters to the output stream
+            writeParams(connection, params);
         }
-        con.connect();
-        InputStream in;
-        if (con.getResponseCode() == 200) in = con.getInputStream();
-        else in = con.getErrorStream();
-        ByteArrayOutputStream bos = new ByteArrayOutputStream();
-        byte[] buffer = new byte[1024 * 1024];
-        int c;
-        while ((c = in.read(buffer)) != -1) bos.write(buffer, 0, c);
-        in.close();
-        bos.close();
-        NetResponse r = new NetResponse(bos.toByteArray());
-        r.setCode(con.getResponseCode());
-        return r;
+        connection.connect();
+        InputStream input;
+        if (connection.getResponseCode() == 200) input = connection.getInputStream();
+        else input = connection.getErrorStream();
+        // Use try-with-resources to close the streams automatically
+        try (ByteArrayOutputStream output = new ByteArrayOutputStream()) {
+            byte[] buffer = new byte[1024 * 1024];
+            int count;
+            while ((count = input.read(buffer)) != -1) output.write(buffer, 0, count);
+            input.close();
+            NetResponse response = new NetResponse(output.toByteArray());
+            response.setCode(connection.getResponseCode());
+            return response;
+        }
+    }
+
+    private void writeParams(HttpURLConnection connection, Map<String, String> params) throws IOException {
+        // Get the encoded arguments string
+        String args = constructArgs(params);
+        // Set the content length header
+        connection.setRequestProperty("Content-Length", String.valueOf(args.getBytes(StandardCharsets.UTF_8).length));
+        // Enable output mode
+        connection.setDoOutput(true);
+        // Write the arguments to the output stream
+        try (OutputStream output = connection.getOutputStream()) {
+            output.write(args.getBytes(StandardCharsets.UTF_8));
+            output.flush();
+        }
     }
 
     public void enqueue(NetCallback cb) {
@@ -82,12 +103,16 @@ public final class NetCall {
                 } catch (IOException e) {
                     cb.onFailure(NetCall.this, e);
                 }
+//                try {
+////                    interrupt();
                 try {
-                    interrupt();
                     join();
-                } catch (Exception e) {
-                    Log.e("NetCall", "Failed to interrupt and join thread", e);
+                } catch (InterruptedException e) {
+                    throw new RuntimeException(e);
                 }
+//                } catch (Exception e) {
+//                    Log.e("NetCall", "Failed to interrupt and join thread", e);
+//                }
             }
         }.start();
     }
